--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,7 @@ body{
 *{
   padding: 0;
   margin: 0;
+  
 }
 
 .par-con{
@@ -23,6 +24,12 @@ body{
 .flex{
   display: flex;
   justify-content: center;
+}
+.flex-col{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .bg{
