--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,11 +36,27 @@ body{
   background-color: #fff;
 }
 
+.hv-100{
+  height: 100vh;
+}
+.hv-90{
+  height: 90vh;
+}
+.mt-10{
+  margin: 2% 0 0 0;
+}
+
 .mt{
-  margin: 16px;
+  margin-top: 16px;
+}
+.mt-3{
+  margin-top: 32px;
 }
 .mb{
   margin-bottom:16px;
+}
+.mb-5{
+  margin-bottom:48px;
 }
 .mb-3{
   margin-bottom:8px;
