--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap'); 
+
 body{
   background-color: #fff;
 }
@@ -10,7 +12,7 @@ body{
 *{
   padding: 0;
   margin: 0;
-  
+  font-family: 'Poppins', sans-serif;
 }
 
 .par-con{
