--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@ body{
 *{
   padding: 0;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins','roboto', sans-serif;
 }
 
 .par-con{
