--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap'); 
-
 body{
-  background-color: #fff;
+  background-color: #fcf8fa;
 }
 
 .navbar{
@@ -12,7 +10,7 @@ body{
 *{
   padding: 0;
   margin: 0;
-  font-family: 'Poppins','roboto', sans-serif;
+  font-family: 'Karla', sans-serif;
 }
 
 .par-con{
@@ -35,7 +33,7 @@ body{
 }
 
 .bg{
-  background-color: #fff;
+  background-color: #1876d2;
 }
 
 .hv-100{
@@ -77,39 +75,49 @@ ul{
 
 /* * home page teams */
 .team-card-con{
-  margin-top: 3rem;
+  background-color: #1876d2;
+  border-radius: 1.5rem;
+  padding: 1.5rem;
 }
 
 .team-card{
-  width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  border: #1876d2 solid 1.2px;
-  border-radius: 12px;
-  background-color: #f8f9fa;
-  margin-bottom: 25px;
-  margin-top: 2.5rem;
-  padding: 25px 0 25px 0; 
+  width: 100%;
+  transition: ease-in-out .7s ;
+  position: relative;
+  overflow: hidden;
 }
 
 .team-card-img{
-  width: 50%;
-  margin-top: -25%;
-  border-radius: 50%;
-  /* box-shadow: 10px 10px 15px 1px rgba(82,78,78,0.43); */
-  background-color: #A8DADC;
+  border-radius: 1rem;
+  transition: ease-in-out .5s ;
 }
 
-.team-card-info{
-  margin: 0 10% 0 10%;
+.team-card-img:hover{
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  transition: ease-in-out .5s ;
+}
+.card-text-con
+{
+  position: absolute;
+  bottom: -42%;
+  height: 40%;
+  z-index: 410;
+  width: 100%;
   text-align: center;
-}
-.team-card-info > p {
-  color: #343a40;
+  transition: ease-in-out .5s ;
+  border-radius: 1rem;
+  background: rgba( 255, 255, 255, 0.25 );
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
+.team-card:hover > .card-text-con
+{
+  bottom: 0;
+  transition: ease-in-out .5s;
+}
 
 /* *ultra wide monitor */
 
@@ -122,8 +130,6 @@ ul{
       display: flex;
       justify-content: center;
       align-items: center;
-
-      position: absolute;
       left: 20%;
       top: 20%;
       color: #ffffff;
@@ -182,32 +188,33 @@ ul{
   }
   .team-card:hover{
     box-shadow: 2px 10px 15px 0px rgba(82,78,78,0.43);
-    transition: ease-in-out .5s ;
+    transform: rotateX(10deg);
+    transition: ease-in-out 3.5s ;
   }
 
-/* ? footer  */
-.footer{
-  width: 100%;
-  margin: 30px 0 0 0;
-  border-radius: 64px 64px 0 0; 
-  background-color: #1876d2;
-  color: #fff;
-  padding: 0 0 10px 0;
-}
+  /* ? footer  */
+  .footer{
+    width: 100%;
+    margin: 30px 0 0 0;
+    border-radius: 64px 64px 0 0; 
+    background-color: #1876d2;
+    color: #fff;
+    padding: 0 0 10px 0;
+  }
 
-.footer-card-con{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  align-items: center;
-}
+  .footer-card-con{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+  }
 
-.copy-right-con
-{
-  text-align: center;
-}
+  .copy-right-con
+  {
+    text-align: center;
+  }
 
 }
 
@@ -276,14 +283,6 @@ ul{
       max-width: 700px;
       border-radius: 2px;
   }
-  /* ? team component */
-  .team-card:hover > .team-card-img{
-    box-shadow: 2px 10px 15px 0px rgba(82,78,78,0.43);
-  }
-  .team-card:hover{
-    box-shadow: 2px 10px 15px 0px rgba(82,78,78,0.43);
-  }
-    
   /* ? footer  */
         
   .footer{
@@ -511,5 +510,13 @@ ul{
   {
     text-align: center;
   }
+
+  /* ? team card */
+  
+.card-text-con
+{
+  bottom: -62%;
+  height: 60%;
+}
 }
 
