--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -65,6 +65,10 @@ body{
   margin-right:6px ;
 }
 
+.a-styles{
+  text-decoration: none;
+}
+
 .main-con{
   position: relative;
 }
@@ -287,11 +291,10 @@ ul{
         
   .footer{
     width: 100%;
-    margin: 30px 0 0 0;
-    border-radius: 64px 64px 0 0; 
+    margin: 5% 0 0 0;
+    border-radius: 28px 28px 0 0; 
     background-color: #1876d2;
     color: #fff;
-    padding: 0 0 10px 0;
   }
 
   .footer-card-con{
